fix: removed gap property

--- a/assets/style.css
+++ b/assets/style.css
@@ -549,4 +549,7 @@ footer span:hover {
     overflow: hidden;
     text-overflow: ellipsis;
   }
+  .charges {
+    gap: 0;
+  }
 }
